--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,9 @@
    "name": "lokeshyourfriend/sample-composer-module-git-hub",
    "description": "A module created for using to install using composer and github",
    "type": "magento2-module",
-   "version": "1.0.0",
+   "version": "2.0.0",
    "license": [
-     "OSL-3.0",
-     "AFL-3.0"
+     "OSL-3.0"
    ],
    "require": {
         "magento/framework": ">=100.0.0",
@@ -20,9 +19,8 @@
     "minimum-stability": "dev",
     "authors": [
         {
-            "name": "Kiwi Commerce Ltd",
-            "email": "hello@kiwicommerce.co.uk",
-            "homepage": "https://kiwicommerce.co.uk/",
+            "name": "Lokesh Yadav",
+            "email": "lokesh.yourfriend@gmail.com",
             "role": "Leader"
         }
     ]
